fix: input is showing wrong font

--- a/assets/css/components/atoms/a-button.css
+++ b/assets/css/components/atoms/a-button.css
@@ -8,7 +8,7 @@
     color: var(--color-on-primary);
     text-transform: uppercase;
     font-size: var(--button, 0.875rem);
-    font-weight: 900;
+    font-weight: 700;
     text-align: center;
     border: 0;
     border-radius: 4rem;
