--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,25 +1,5 @@
 /* https://google-webfonts-helper.herokuapp.com/fonts/quicksand?subsets=latin */
 
-/* quicksand-regular - latin */
-@font-face {
-    font-family: 'Quicksand';
-    font-style: normal;
-    font-weight: 400;
-    src: url('./fonts/quicksand-v13-latin-regular.eot');
-    /* IE9 Compat Modes */
-    src: local(''),
-        url('./fonts/quicksand-v13-latin-regular.eot?#iefix') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('./fonts/quicksand-v13-latin-regular.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('./fonts/quicksand-v13-latin-regular.woff') format('woff'),
-        /* Modern Browsers */
-        url('./fonts/quicksand-v13-latin-regular.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('./fonts/quicksand-v13-latin-regular.svg#Quicksand') format('svg');
-    /* Legacy iOS */
-}
-
 /* quicksand-500 - latin */
 @font-face {
     font-family: 'Quicksand';
@@ -87,7 +67,7 @@
 
     /* Default headings font settings */
     --font-family-title: 'Quicksand', sans-serif;
-    --font-weight-title: 900;
+    --font-weight-title: 700;
     --line-height-title: 1.2;
 
     --settings-title-level-1: 1.75rem;
